@@ -836,6 +836,10 @@ layer.
   'mask-size' have no affect on <a>'mask element'</a> elements.
 </p>
 
+<p class="note">The 'mask' property does not influence the 'mask-box-image' properties. ''mask: none'' does not remove any masking definition of 'mask-box-image'.</p>
+
+<p class="issue">Shall ''mask: none'' influence 'mask-box-image'? This would mean to "link" the both shorthand properties.</p>
+
 <h3 id="the-mask-type">The 'mask-type' property</h3>
 
 <table class="propdef">
