@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-05-23 name=dcterms.date>
+  <meta content=2013-05-29 name=dcterms.date>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content="Brian Birtles" name=dcterms.creator>
   <meta
@@ -36,14 +36,14 @@
 
    <h1>CSS Masking Level 1</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 23 May 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 29 May 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130523/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130529/-->
 
     <dt>Latest version:
 
@@ -1422,6 +1422,18 @@ body {
    and ‘<a href="#mask-size0"><code class=property>mask-size</code></a>’
    have no affect on <a href="#MaskElement"><code
    class=element-name>&lt;mask></code></a> elements.
+
+  <p class=note>The ‘<a href="#mask"><code
+   class=property>mask</code></a>’ property does not influence the ‘<a
+   href="#mask-box-image"><code class=property>mask-box-image</code></a>’
+   properties. ‘<code class=css>mask: none</code>’ does not remove any
+   masking definition of ‘<a href="#mask-box-image"><code
+   class=property>mask-box-image</code></a>’.
+
+  <p class=issue>Shall ‘<code class=css>mask: none</code>’ influence
+   ‘<a href="#mask-box-image"><code
+   class=property>mask-box-image</code></a>’? This would mean to "link" the
+   both shorthand properties.
 
   <h3 id=the-mask-type><span class=secno>5.9. </span>The ‘<a
    href="#mask-type"><code class=property>mask-type</code></a>’ property</h3>
