@@ -1,3 +1,6 @@
+2013-05-29  Dirk Schulze  <dschulze@adobe.com>
+	Add note and issue that 'mask: none' does not influence 'mask-box-image'.
+
 2013-05-22  Dirk Schulze  <dschulze@adobe.com>
 	Clarify interaction with Visual Effects module from CSS 2.1.
 	Restrict masks and clipping paths not to apply to defs elements.
